BorderLayout werkend gemaakt

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,11 @@
 {
     "configurations": [
-        
-    
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - Main",
+            "request": "launch",
+            "mainClass": "Applicatie.Main"
+        },
         {
             "type": "java",
             "name": "CodeLens (Launch) - Testfile",
