--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# zelf toegevoegd:
+KBSgroep3.iml
+build.xml
+manifest.mf
 
 # Created by https://www.gitignore.io/api/java,netbeans,intellij,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=java,netbeans,intellij,visualstudiocode
