--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,10 +29,12 @@ dist.jar=${dist.dir}/JavaApplication43.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jsch-0.1.55.jar=C:\\Users\\Jascha\\Desktop\\jsch-0.1.55.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.jsch-0.1.55.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
