--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,11 +30,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.jsch-0.1.55.jar=C:\\Users\\Jascha\\Desktop\\jsch-0.1.55.jar
+file.reference.jsch-0.1.55.jar-1=C:\\Users\\Trist\\OneDrive\\Desktop\\jsch-0.1.55.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.jsch-0.1.55.jar}
+    ${file.reference.jsch-0.1.55.jar}:\
+    ${file.reference.jsch-0.1.55.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
